# sondera-coding-agent-hooks

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.claude/skills/cedar/: SKILL.md
.github/workflows/: ci.yml
apps/claude/: Cargo.toml
apps/claude/scripts/: README.md  install-hooks-binary.sh  install-hooks.sh
apps/claude/src/: main.rs
apps/claude/src/app/: hooks.rs  install.rs  mod.rs  response.rs  types.rs
apps/copilot/: Cargo.toml
apps/copilot/scripts/: install-hooks-binary.sh  install-hooks.sh
apps/copilot/src/: main.rs
apps/copilot/src/app/: hooks.rs  install.rs  mod.rs  response.rs  types.rs
apps/cursor/: Cargo.toml
apps/cursor/scripts/: README.md  install-hooks-binary.sh  install-hooks.sh
apps/cursor/src/: main.rs
apps/cursor/src/app/: hooks.rs  install.rs  mod.rs  response.rs  types.rs
apps/gemini/: Cargo.toml
apps/gemini/scripts/: README.md  install-hooks-binary.sh  install-hooks.sh
apps/gemini/src/: main.rs
apps/gemini/src/app/: hooks.rs  install.rs  mod.rs  response.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: auth.rs  config.rs  cors.rs  dto.rs  filter.rs  lib.rs
crates/dashboard/src/routes/: health.rs  mod.rs  stream.rs  trajectories.rs
crates/dashboard/src/storage/: mod.rs  read_only.rs  snapshot.rs
crates/dashboard/src/stream/: mod.rs  poll.rs  tail.rs
crates/dashboard/tests/: auth_gate.rs  cors.rs  schema_contract.rs  static_serving.rs  store_lifecycle.rs  stream_ws.rs  trajectories_api.rs
crates/guardrails/ifc/: Cargo.toml
crates/guardrails/ifc/src/: label.rs  lib.rs
crates/guardrails/ifc/tests/: ollama_integration.rs
crates/guardrails/llm-backend/: Cargo.toml
crates/guardrails/llm-backend/src/: lib.rs  ollama.rs  openai.rs
crates/guardrails/policy/: Cargo.toml
crates/guardrails/policy/src/: lib.rs  policy.rs
crates/guardrails/policy/tests/: ollama_integration.rs
crates/guardrails/signature/: Cargo.toml
crates/guardrails/signature/rules/: exfil.yar  injection.yar  obfuscation.yar  pi.yar  secrets.yar
crates/guardrails/signature/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: harness.rs  lib.rs  rpc.rs  types.rs
crates/harness/src/cedar/: entity.rs  mod.rs  transform.rs
crates/harness/src/monitors/: backstop.rs  config.rs  mod.rs  predicates.rs  untrusted_then_protected_write.rs
crates/harness/src/storage/: entity.rs  file.rs  mod.rs  turso.rs
crates/harness/tests/: cedar_policy_loading.rs  monitor_fsm.rs  monitor_mirror.rs  monitor_persistence.rs  multi_hop_integration.rs  trajectory_label_persistence.rs  verdict_backstop.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/seed/: Cargo.toml
crates/seed/fixtures/: approved.jsonl  tripping.jsonl
crates/seed/src/: main.rs  remap.rs
docs/: llm-backend.md
examples/: cedar_request_response.json  claude_pretooluse.json  insider_threat.cedar  lotl.cedar  supply_chain.cedar
examples/github_copilot_cli_hooks/: README.md
examples/github_copilot_cli_hooks/.github/hooks/: sondera.json
examples/github_copilot_cli_hooks/fixtures/: agentStop.json  permissionRequest-rewrite.json  postToolUseFailure.json  preToolUse-allow.json  preToolUse-deny.json  preToolUse-rewrite.json  sessionEnd.json  sessionStart.json  userPromptSubmitted.json
examples/github_copilot_cli_hooks/policies/: investment_cli_hooks.cedar  spec.toml
examples/github_copilot_cli_hooks/scripts/: run_fixture_smoke.sh
policies/: base.cedar  base.cedarschema  destructive.cedar  file.cedar  ifc.cedar  ifc.toml  monitor.toml  multi_hop.cedar  policies.toml  supply_chain_risk.cedar
scripts/: dev.sh
web/: components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json
web/src/: app.css  app.html
web/src/lib/: format.ts  join.ts  summarize.ts
web/src/lib/api/: client.ts  stream.svelte.ts  types.ts
web/src/lib/components/: DecisionBadge.svelte  DecisionPanel.svelte  FilterBar.svelte  MonitorBadge.svelte  NewEventsPill.svelte  SeverityBadges.svelte  StatusChip.svelte  TaintMonitor.svelte  Timeline.svelte  TimelineRow.svelte  TokenScreen.svelte  Tree.svelte
web/src/lib/stores/: snapshot.svelte.ts  token.svelte.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/trajectories/[id]/: +page.svelte
