[package]
name = "sondera-cursor"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sondera Team"]
description = "Cursor hooks implementation for Sondera Agentic Security Platform"

[dependencies]
sondera-harness = { workspace = true }
sondera-hooks-common = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.40", features = ["full"] }
dirs = "5.0"
chrono = "0.4"
which = "7.0"
