[package]
name = "sondera-hooks-common"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sondera Team"]
description = "Shared utilities for Sondera coding agent hooks"

[dependencies]
sondera-harness = { workspace = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
dotenvy = "0.15"
whoami = "1.6"
