[package]
name = "sondera-llm-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "LLM backend abstraction for Sondera guardrail crates"
authors.workspace = true
repository.workspace = true

[dependencies]
ollama-rs = { version = "0.3", features = [] }
reqwest = { version = "0.12", features = ["json"] }
schemars = { version = "1.2", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
