[package]
name = "sondera-policy"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "LLM-based policy evaluation guardrail for AI agent governance"
authors.workspace = true
repository.workspace = true

[[bin]]
name = "policy-eval"
path = "src/bin/policy_eval.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ollama-rs = { version = "0.3", features = [] }
schemars = { version = "1.2", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
